--- a/index.html
+++ b/index.html
@@ -2123,7 +2123,7 @@ The final output MUST be only the JSON code, like this example:
             button.disabled = true;
 
             try {
-                // --- LEITURA DOS NOVOS CONTROLES ---
+                // --- LEITURA DOS NOVOS CONTROLES DA INTERFACE ---
                 const voiceName = document.getElementById('audioVoice').value;
                 const audioTemp = parseFloat(document.getElementById('audioStyle').value);
 
