--- a/index.html
+++ b/index.html
@@ -964,7 +964,7 @@
                     <label for="speakingPace">Ritmo de Fala:</label>
                     <select id="speakingPace" class="card-background">
                         <option value="moderate" selected>Moderado</option>
-                        <option value="slow">Lento</m>
+                        <option value="slow">Lento</option>
                         <option value="fast">Rápido</option>
                     </select>
                 </div>
