--- a/index.html
+++ b/index.html
@@ -2131,15 +2131,15 @@ The final output MUST be only the JSON code, like this example:
         /**
          * Gera e valida ideias de vídeo com base no nicho fornecido.
          */
-        const generateVideoIdeas = async () => {
-            const nicheDescription = elements.nicheDescription.value.trim();
+	const generateVideoIdeas = async () => {
+            const nicheDescription = document.getElementById('nicheDescription').value.trim();
             if (!nicheDescription) {
                 window.showToast("Por favor, descreva o nicho do seu canal.");
                 return;
             }
 
-            const button = elements.generateIdeasBtn;
-            const outputContainer = elements.ideasOutput;
+            const button = document.getElementById('generateIdeasBtn');
+            const outputContainer = document.getElementById('ideasOutput');
             outputContainer.innerHTML = `<div class="loading-spinner-small mx-auto my-4"></div>`;
             showLoading(button);
 
@@ -2163,15 +2163,19 @@ The final output MUST be only the JSON code, like this example:
 
                 outputContainer.innerHTML = ''; // Limpa o loading
 
+                // --- INÍCIO DA LÓGICA DE RENDERIZAÇÃO MINIMALISTA ---
                 ideas.forEach((idea, index) => {
                     const ideaCard = `
-                        <div class="card-background p-4 rounded-lg shadow-md border-l-4 border-indigo-500 animate-fade-in">
-                            <h4 class="font-bold text-lg text-gray-800 dark:text-gray-200">${index + 1}. ${idea.title}</h4>
-                            <p class="text-sm mt-2"><strong>Ângulo Único:</strong> ${idea.angle}</p>
-                            <p class="text-sm mt-1"><strong>Público-Alvo:</strong> ${idea.targetAudience}</p>
-                            <p class="text-sm mt-1"><strong>Potencial de Viralidade:</strong> <span class="font-bold text-indigo-500">${idea.viralityScore} / 10</span></p>
-                            <div class="mt-4 flex justify-end">
-                                <button class="btn btn-primary btn-small" onclick="window.selectIdea(${JSON.stringify(idea).replace(/"/g, '&quot;')})">
+                        <div class="card-background p-4 rounded-lg shadow-md border-l-4 border-indigo-500 animate-fade-in flex flex-col justify-between min-h-[160px]">
+                            <div>
+                                <h4 class="font-bold text-lg text-gray-800 dark:text-gray-200 mb-2">${index + 1}. ${idea.title}</h4>
+                                <p class="text-sm text-gray-500 dark:text-gray-400 italic mb-3">"${idea.angle}"</p>
+                            </div>
+                            <div class="flex justify-between items-center text-sm">
+                                <span class="font-bold text-indigo-500 bg-indigo-100 dark:bg-indigo-900 dark:text-indigo-300 py-1 px-2 rounded">
+                                    Potencial: ${idea.viralityScore} / 10
+                                </span>
+                                <button class="btn btn-primary btn-small py-1 px-3" onclick="window.selectIdea(${JSON.stringify(idea).replace(/"/g, '"')})">
                                     Usar esta Ideia
                                 </button>
                             </div>
@@ -2179,6 +2183,7 @@ The final output MUST be only the JSON code, like this example:
                     `;
                     outputContainer.innerHTML += ideaCard;
                 });
+                // --- FIM DA LÓGICA DE RENDERIZAÇÃO MINIMALISTA ---
 
             } catch (error) {
                 outputContainer.innerHTML = `<p class="text-red-500 text-sm">Falha ao gerar ideias: ${error.message}</p>`;
