--- a/index.html
+++ b/index.html
@@ -2213,13 +2213,23 @@ The final output MUST be only the JSON code, like this example:
     
         /**
          * Gera e valida ideias de vídeo com base no nicho fornecido.
+         * Limpa o estado do roteiro anterior antes de começar.
          */
         const generateVideoIdeas = async () => {
-            const nicheDescription = document.getElementById('nicheDescription').value.trim();
+            const nicheDescriptionInput = document.getElementById('nicheDescription');
+            const nicheDescription = nicheDescriptionInput.value.trim();
             if (!nicheDescription) {
                 window.showToast("Por favor, descreva o nicho do seu canal.");
                 return;
             }
+
+            // --- INÍCIO DA NOVA LÓGICA DE RESET ---
+            // 1. Zera todo o estado da aplicação (roteiro, painel, etc.)
+            resetApplicationState();
+            
+            // 2. Restaura o texto do nicho que o usuário digitou, pois o reset o apagou.
+            nicheDescriptionInput.value = nicheDescription;
+            // --- FIM DA NOVA LÓGICA DE RESET ---
 
             const button = document.getElementById('generateIdeasBtn');
             const outputContainer = document.getElementById('ideasOutput');
@@ -2246,7 +2256,6 @@ The final output MUST be only the JSON code, like this example:
 
                 outputContainer.innerHTML = ''; 
 
-                // --- LÓGICA DE RENDERIZAÇÃO FINAL MINIMALISTA ---
                 ideas.forEach((idea, index) => {
                     const ideaCard = `
                         <div class="card-background p-4 rounded-lg shadow-md border-l-4 border-indigo-500 animate-fade-in flex flex-col justify-between min-h-[140px]">
