--- a/index.html
+++ b/index.html
@@ -2160,7 +2160,8 @@ The final output MUST be only the JSON code, like this example:
 
             try {
                 const fullScript = getTranscriptOnly();
-                const selectedLanguage = elements.languageSelect.value; // Pega o idioma selecionado
+                // Pega o idioma selecionado pelo usuário na interface principal
+                const selectedLanguage = elements.languageSelect.value; 
 
                 // --- INÍCIO DA CORREÇÃO NO PROMPT ---
                 const prompt = `Você é um "Retention Editor", um especialista em otimizar roteiros de YouTube para máxima retenção de audiência. Sua tarefa é analisar o roteiro fornecido e dividi-lo em parágrafos, avaliando cada um.
@@ -2177,25 +2178,40 @@ The final output MUST be only the JSON code, like this example:
                     - 'green': Gancho forte, altamente engajante.
                     - 'yellow': Conteúdo necessário, mas pode ser um pouco lento.
                     - 'red': Risco de queda. Monótono ou confuso.
-                3.  Escrever uma "suggestion" curta e acionável para melhorar o parágrafo. **IMPORTANTE: A sugestão DEVE estar no idioma: ${selectedLanguage}.**
-                4.  Retornar o "paragraphText" original.
+                3.  Escrever uma "suggestion" curta e acionável para melhorar o parágrafo. **IMPORTANTE: A sugestão DEVE estar no idioma: '${selectedLanguage}'.**
+                4.  Retornar o "paragraphText" original, sem nenhuma alteração.
 
                 Responda APENAS com um array JSON. Cada objeto no array deve ter exatamente as chaves: "paragraphText", "retentionScore", e "suggestion".`;
                 // --- FIM DA CORREÇÃO NO PROMPT ---
 
                 const rawResult = await callGroqAPI(prompt, 4000);
                 const cleanedResult = cleanGeneratedText(rawResult, true);
+                if (!cleanedResult) {
+                    throw new Error("A IA não retornou um JSON válido para a análise de retenção.");
+                }
                 const analysis = JSON.parse(cleanedResult);
 
                 outputContainer.innerHTML = ''; 
 
                 analysis.forEach(item => {
+                    // Mapeia os scores para os rótulos em português
+                    const scoreLabels = {
+                        green: "PONTO FORTE",
+                        yellow: "PONTO DE ATENÇÃO",
+                        red: "PONTO DE RISCO"
+                    };
+                    const scoreColors = {
+                        green: "green-500",
+                        yellow: "yellow-400",
+                        red: "red-500"
+                    }
+
                     const analysisCard = `
                         <div class="retention-paragraph retention-${item.retentionScore}">
                             <p class="text-sm">${item.paragraphText}</p>
                             <div class="mt-3 pt-3 border-t border-dashed border-gray-200 dark:border-gray-700">
-                                <strong class="text-${item.retentionScore === 'red' ? 'red-500' : (item.retentionScore === 'yellow' ? 'yellow-400' : 'green-500')}">
-                                    ${item.retentionScore === 'red' ? 'PONTO DE RISCO' : (item.retentionScore === 'yellow' ? 'PONTO DE ATENÇÃO' : 'PONTO FORTE')}
+                                <strong class="text-${scoreColors[item.retentionScore] || 'gray-500'}">
+                                    ${scoreLabels[item.retentionScore] || 'ANÁLISE'}
                                 </strong>
                                 <p class="text-xs text-gray-600 dark:text-gray-400">${item.suggestion}</p>
                             </div>
